# bevy_spline_3d

./: Cargo.toml  README.md  flake.nix
docs/: ROADMAP.md
examples/: distribution.rs  editor.rs  intersection.rs  path_follow.rs  road.rs  surface_projection.rs
src/: geometry.rs  lib.rs  main.rs  surface.rs
src/camera/: fly.rs  mod.rs  orbit.rs
src/distribution/: components.rs  mod.rs  projection.rs  systems.rs
src/editor/: gizmos.rs  input.rs  mod.rs  selection.rs
src/path_follow/: components.rs  mod.rs  systems.rs
src/road/: intersection.rs  mesh_gen.rs  mod.rs  projection.rs
src/spline/: arc_length.rs  components.rs  mod.rs  projection.rs  types.rs
