[package]
name = "bevy_spline_3d"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Bevy plugin for 3D spline editing with interactive gizmos"
keywords = ["bevy", "spline", "bezier", "editor", "3d"]
categories = ["game-development", "graphics", "rendering"]

[features]
default = ["editor"]
editor = []  # Enable interactive editor and gizmos

[dependencies]
bevy = "0.18"
avian3d = "0.5"

[[example]]
name = "editor"
path = "examples/editor.rs"

[[example]]
name = "distribution"
path = "examples/distribution.rs"

[[example]]
name = "road"
path = "examples/road.rs"

[[example]]
name = "intersection"
path = "examples/intersection.rs"

[[example]]
name = "path_follow"
path = "examples/path_follow.rs"

[[example]]
name = "surface_projection"
path = "examples/surface_projection.rs"
